--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,54 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:src="@drawable/img"
-        android:id="@+id/image"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="50dp"/>
+    <!-- Banner TextView at the top -->
     <TextView
+        android:id="@+id/assignmentBanner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/image"
-        android:text="What Device Do You Have"
+        android:text="CSE_3212 Assignments"
         android:gravity="center"
+        android:textSize="24sp"
         android:textStyle="bold"
-        android:textSize="30sp"
         android:background="@color/blue"
-        android:textColor="@color/black"
-        android:id="@+id/txtvw"
+        android:textColor="@color/white"
+        android:padding="10dp"
+        android:layout_alignParentTop="true"
         />
+
+    <!-- Buttons centered vertically -->
     <LinearLayout
+        android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:gravity="center"
-        android:paddingTop="100dp">
+        android:layout_centerInParent="true">
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button1"
-            android:text="PC"
-            android:backgroundTint="@color/buttonBackground" />
+            android:id="@+id/assignment1"
+            android:text="Assignment_01" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button2"
-            android:text="LAPTOP"
-            android:backgroundTint = "@color/buttonBackground"
-            android:layout_marginStart="20dp"/>
+            android:id="@+id/assignment2"
+            android:text="Assignment_02"
+            android:layout_marginTop="20dp" />
+
     </LinearLayout>
 
-
-</LinearLayout>
+</RelativeLayout>
