assignment 2 on progress

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,14 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#2196F3</color>
     <color name="buttonBackground">#F32133</color>
+    <color name="purple">#6200EE</color>        <!-- Purple -->
+    <color name="darkPurple">#3700B3</color>    <!-- Dark Purple -->
+    <color name="teal">#03DAC5</color>          <!-- Teal -->
+
+    <color name="grey">#757575</color>           <!-- Grey -->
+    <color name="red">#B00020</color>            <!-- Red -->
+    <color name="green">#4CAF50</color>          <!-- Green -->
+
+    <color name="orange">#FF9800</color>         <!-- Orange -->
+
 </resources>
