--- a/app/src/main/res/layout/e_list_group.xml
+++ b/app/src/main/res/layout/e_list_group.xml
@@ -1,8 +1,25 @@
-<?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/listGroupText"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:textSize="18sp"
-    android:textStyle="bold" />
+    android:orientation="horizontal"
+    android:padding="10dp"
+    android:background="#E0E0E0">
+
+    <ImageView
+        android:id="@+id/animeImage"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginRight="10dp"
+        android:scaleType="centerCrop" />
+
+    <TextView
+        android:id="@+id/listGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="#000" />
+</LinearLayout>
+
