--- a/app/src/main/res/layout/e_list_group.xml
+++ b/app/src/main/res/layout/e_list_group.xml
@@ -11,15 +11,17 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginRight="10dp"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/aot"/>
 
     <TextView
-        android:id="@+id/listGroup"
+        android:id="@+id/listGroupText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="#000" />
+        android:textColor="#000"
+        />
 </LinearLayout>
 
